Cleaned ignored files and updated .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
-# Virtual Environments
-backend/venv/
+# Root-level Python virtual environment
+venv/
+.venv/
 
 # Python Cache Files
 backend/app/__pycache__/
