--- a/frontend/app.json
+++ b/frontend/app.json
@@ -7,6 +7,8 @@
     "icon": "./assets/images/icon.png",
     "userInterfaceStyle": "light",
     "newArchEnabled": true,
+    "owner": "sitsmart",
+    "privacy": "public",
     "splash": {
       "image": "./assets/images/splash-icon.png",
       "resizeMode": "contain",
@@ -27,16 +29,16 @@
     "plugins": [
       "expo-font"
     ],
-    "extra": {
-      "eas": {
-        "projectId": "03170f02-420b-4fdb-a004-c3ea72008066"
-      }
-    },
     "runtimeVersion": {
       "policy": "appVersion"
     },
+    "extra": {
+      "eas": {
+        "projectId": "0f9462fc-61f3-43f4-aff2-b25dac0c0988"
+      }
+    },
     "updates": {
-      "url": "https://u.expo.dev/03170f02-420b-4fdb-a004-c3ea72008066"
+      "url": "https://u.expo.dev/0f9462fc-61f3-43f4-aff2-b25dac0c0988"
     }
   }
 }
