--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,8 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/datetimepicker": "^8.3.0",
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/native-stack": "^7.3.10",
     "@supabase/supabase-js": "^2.49.4",
@@ -16,14 +18,14 @@
     "expo": "~52.0.43",
     "expo-dev-client": "~5.0.20",
     "expo-font": "~13.0.4",
+    "expo-image-picker": "~16.0.6",
     "expo-status-bar": "~2.0.1",
     "expo-updates": "~0.27.4",
     "react": "18.3.1",
     "react-native": "0.76.9",
+    "react-native-modal-datetime-picker": "^18.0.0",
     "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.4.0",
-    "expo-image-picker": "~16.0.6",
-    "@react-native-async-storage/async-storage": "1.23.1"
+    "react-native-screens": "~4.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
