--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "metro-config": "^0.81.0",
     "metro-resolver": "^0.81.0",
     "react": "^18.3.1",
-    "react-native": "^0.76.9"
+    "react-native": "^0.76.9",
+    "@react-native-community/datetimepicker": "8.2.0"
   },
   "devDependencies": {
     "@types/react": "~18.3.12",
@@ -24,6 +25,6 @@
       "reactNativeDirectoryCheck": {
         "listUnknownPackages": false
       }
+    }
   }
-}
 }
