Final edits, app.json, home and calendar screens updated

--- a/app.json
+++ b/app.json
@@ -34,7 +34,8 @@
       "adaptiveIcon": {
         "foregroundImage": "./frontend/assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.sitsmart.sitsmart"
     },
     "runtimeVersion": {
       "policy": "appVersion"
