--- a/frontend/app.json
+++ b/frontend/app.json
@@ -21,7 +21,8 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.sitsmart.sitsmart"
     },
     "web": {
       "favicon": "./assets/favicon.png"
