--- a/backend/app/.env
+++ b/backend/app/.env
@@ -1,1 +1,1 @@
-DATABASE_URL=postgresql://postgres:Fu11C0w1ing@192.168.1.153:5432/sit_smart
+DATABASE_URL=postgresql://postgres:---@localhost:5432/sit_smart
